@@ -10741,6 +10741,7 @@
 	  serial console.  I-/D-Caches and DTCM have been enabled.  The delay
 	  loop has been calibrated -- very fast (2015-07-19).
 	* drivers/sensor and include/nuttx/sensors: Add support to Bosch BMP180
-	  barometer.  From Alan Carvalho de Assis.
+	  barometer.  From Alan Carvalho de Assis (2015-07-20).
 	* configs/stm32f4discovery/: Add support to BMP180 driver on the
-	  STM32F4Discovery.  From Alan Carvalho de Assis.
+	  STM32F4Discovery.  From Alan Carvalho de Assis (2015-07-20).
+	* arch/arm/srch/stm32f7:  Add an STM32 F7 Ethernet driver (2015-07-20).
